[package]
name = "secure-llm-gateway"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Secure, high-performance LLM Gateway in Rust with redaction, rate limiting, and anonymized logging."
repository = ""

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "brotli", "http2", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower = { version = "0.4", features = ["util", "timeout", "limit", "load-shed"] }
tower-http = { version = "0.5", features = ["trace", "cors", "compression-full", "limit"] }
tower_governor = "0.5"
governor = "0.8"
regex = "1"
aho-corasick = "1"
once_cell = "1"
dotenvy = "0.15"
anyhow = "1"
thiserror = "1"
bytes = "1"
futures = "0.3"
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
uuid = { version = "1", features = ["v4"] }
metrics = "0.22"
metrics-exporter-prometheus = { version = "0.13", default-features = false, features = ["http-listener"] }
hyper = { version = "1", features = ["full"] }
http = "1"
time = { version = "0.3", features = ["formatting"] }
redis = { version = "0.24", features = ["aio", "tokio-comp", "connection-manager"] }
opentelemetry = { version = "0.28", features = ["trace"] }
opentelemetry_sdk = { version = "0.28", features = ["trace", "rt-tokio"] }
tracing-opentelemetry = "0.29"
opentelemetry-otlp = { version = "0.28", features = ["http-proto"] }
